Left aligned the category description text. Put the category title and description above the food picture. Made the background overlay opaic so that it side-steps it prevents people from noticing that you are still scrolling the body while swiping left-right

--- a/PhotoMenu/static/PhotoMenu/CSS/SitePages/RestaurantPage.css
+++ b/PhotoMenu/static/PhotoMenu/CSS/SitePages/RestaurantPage.css
@@ -52,8 +52,8 @@ span.day-wrapper {
 p.category-description{
     font-size: 13px;
     color: #777777;
-    width: 90%;
-    margin: 7px 0px 5px 5%;
+    width: 91%;
+    margin: 7px 0px 5px 2%;
     line-height: 17px;
 }
 
